--- a/.github/workflows/notebook_runner.yaml
+++ b/.github/workflows/notebook_runner.yaml
@@ -3,7 +3,7 @@ name: Run Jupyter Notebook
 on:
   schedule:
     # Runs at the top of every hour
-    - cron:  '30'
+    - cron:  '30 * * * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
